Add match type to FontCacheKey information

Fixes situations in which a locally unique font name match masks a
result for a family name match.

This cannot be tested before src: local() matching is enabled by
switching the flag. A layout test covering this situation will be added
when the flag is enabled.

Bug: 921029
Change-Id: I4123cb70aa65cb59e4a00c3a58e312ef6fa24b64
Reviewed-on: https://chromium-review.googlesource.com/c/1407069
Commit-Queue: Dominik Röttsches <drott@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622167}
Former-commit-id: e356e802917cea2049ad5f3aacc8ba40601c5639