third_party/blink/renderer/core/css/css_font_face_source.cc
@@ -58,7 +58,9 @@ scoped_refptr<SimpleFontData> CSSFontFaceSource::GetFontData(
     return CreateFontData(font_description, font_selection_capabilities);
   }
 
-  FontCacheKey key = font_description.CacheKey(FontFaceCreationParams());
+  bool is_unique_match = false;
+  FontCacheKey key =
+      font_description.CacheKey(FontFaceCreationParams(), is_unique_match);
 
   // Get or create the font data. Take care to avoid dangling references into
   // font_data_table_, because it is modified below during pruning.
