third_party/blink/renderer/core/css/css_font_face_source_test.cc
@@ -42,7 +42,9 @@ unsigned SimulateHashCalculation(float size) {
   FontDescription font_description;
   font_description.SetSizeAdjust(size);
   font_description.SetAdjustedSize(size);
-  return font_description.CacheKey(FontFaceCreationParams()).GetHash();
+  bool is_unique_match = false;
+  return font_description.CacheKey(FontFaceCreationParams(), is_unique_match)
+      .GetHash();
 }
 }
 
@@ -50,9 +52,9 @@ TEST(CSSFontFaceSourceTest, HashCollision) {
   DummyFontFaceSource font_face_source;
   // Even if the hash value collide, fontface cache should return different
   // value for different fonts.
-  EXPECT_EQ(SimulateHashCalculation(527), SimulateHashCalculation(3099));
-  EXPECT_NE(font_face_source.GetFontDataForSize(527),
-            font_face_source.GetFontDataForSize(3099));
+  EXPECT_EQ(SimulateHashCalculation(6009), SimulateHashCalculation(8634));
+  EXPECT_NE(font_face_source.GetFontDataForSize(6009),
+            font_face_source.GetFontDataForSize(8634));
 }
 
 // Exercises the size font_data_table_ assertions in CSSFontFaceSource.
